--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,11 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Helpers/CategoryHelper.php",
+            "app/Helpers/CategoryTableHelper.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
