--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,11 @@
         "guzzlehttp/guzzle": "^7.5",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.8",
-        "laravel/ui": "*",        
+        "laravel/ui": "*",
         "maatwebsite/excel": "^3.1",
+        "mpdf/mpdf": "^8.2",
         "picqer/php-barcode-generator": "*",
-        "spatie/laravel-html": "*"        
+        "spatie/laravel-html": "*"
     },
     "require-dev": {
         "spatie/laravel-ignition": "^2.0",
